[package]
name = "hyperlane-broadcast"
version = "0.5.0"
edition = "2024"
authors = ["root@ltpp.vip"] 
license = "MIT"
description = """hyperlane-broadcast is a lightweight and ergonomic wrapper over Tokio’s broadcast channel designed for easy-to-use publish-subscribe messaging in async Rust applications. It simplifies the native Tokio broadcast API by providing a straightforward interface for broadcasting messages to multiple subscribers with minimal boilerplate."""
keywords = ["time", "hyperlane", "broadcast", "tokio", "hyperlane"]
repository = "https://github.com/eastspire/hyperlane-broadcast.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
dashmap = "6.1.0"
lombok-macros = "1.11.4"
tokio = { version = "1.45.1", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
